<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="multiply"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="348dp"
        android:layout_height="197dp"


        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/email_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_conversion_wrapHeight="412"
        tools:layout_conversion_wrapWidth="819" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="0dp"
        android:layout_height="53dp"

        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#FFC107"
        android:textColorHint="#F9FAF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_conversion_wrapHeight="105"
        tools:layout_conversion_wrapWidth="656" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="1dp"
        android:background="#11000000"

        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="#FCFDFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signup"
        tools:layout_conversion_wrapHeight="105"
        tools:layout_conversion_wrapWidth="63" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:text="Not a Member?"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/singup_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:layout_conversion_wrapHeight="105"
        tools:layout_conversion_wrapWidth="578" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="100dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:textColor=" #ffffff "
        app:layout_constraintBottom_toTopOf="@+id/singup_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/singup_login"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="164dp"
        android:background="@null"
        android:text="@string/signup"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:text="@string/forgotopassword"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/forgetPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:text="click here"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/singup_login"
        app:layout_constraintVertical_bias="0.159" />


</android.support.constraint.ConstraintLayout>
